src/test/deca/syntax/invalid/class/class_sans_ident.deca
/*
	Description: declaration class sans indentité

	Resultat syntaxiquement invalid

	Date: 20/01/2020

*/



class {
	
	int x;
	
}
